<resources>
    <string name="app_name">Aster</string>
    <string name="signup">회원가입</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="home">홈</string>
    <string name="ranking">랭킹</string>
    <string name="feed">게시판</string>
    <string name="myInfo">내 정보</string>
    <string name="name">이름</string>
    <string name="grade">학번</string>
    <string name="best_match">최고의 궁합</string>
    <string name="my_class_info">우리 반 정보</string>
    <string name="edit">수정하기</string>
    <string name="show_my_feed">내 게시물 보기</string>
    <string name="skip">건너뛰기</string>
    <string name="notice_board">게시판</string>
    <string name="candy">사탕</string>
    <string name="rank">순위</string>
    <string name="question">\?%</string>
    <string name="match_write_description">나와의 궁합률이 궁금한 사람의 이름을 적어주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>