<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.login.activity.SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/bold"
            android:text="@string/signup"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_signup_id"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/focus_edit_text"
            android:drawableStart="@drawable/signup_id"
            android:drawablePadding="12dp"
            android:fontFamily="@font/regular"
            android:hint="@string/id"
            android:paddingStart="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_signup"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_signup_pw"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/focus_edit_text"
            android:drawableStart="@drawable/signup_id"
            android:drawablePadding="12dp"
            android:fontFamily="@font/regular"
            android:hint="@string/password"
            android:paddingStart="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/et_signup_id"
            app:layout_constraintStart_toStartOf="@id/et_signup_id"
            app:layout_constraintTop_toBottomOf="@id/et_signup_id"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/disable_btn"
            android:fontFamily="@font/regular"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="loginXquare"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/et_signup_pw"
            app:layout_constraintStart_toStartOf="@id/et_signup_pw" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>